// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`TmConnectedNetwork has a connecting state 1`] = `
<div
  class="tm-connected-network tm-disconnected-network"
  id="tm-disconnected-network"
>
  <img
    class="tm-connected-network-loader"
    src="~assets/images/loader.svg"
  />
   
  <div
    class="tm-connected-network__string tm-connected-network__string--connecting"
  >
    
    Connecting to Test Net…
  
  </div>
</div>
`;

exports[`TmConnectedNetwork has the expected html structure 1`] = `
<div
  class="tm-connected-network tm-connected-network--mocked"
  id="tm-connected-network"
>
  <div
    class="tm-connected-network__connection"
  >
    <div
      class="tm-connected-network__icon"
      id="tm-connected-network__icon"
    >
      <i
        class="material-icons"
      >
        lock
      </i>
    </div>
     
    <div
      class="tm-connected-network__string"
      id="tm-connected-network__string"
    >
      <span
        class="chain-id"
      >
        Test Net
      </span>
    </div>
  </div>
   
  <div
    class="tm-connected-network__string"
    id="tm-connected-network__block"
  >
    <span>
      #42
    </span>
    <!---->
  </div>
</div>
`;

exports[`TmConnectedNetwork shows the connected node 1`] = `
<div
  class="tm-connected-network"
  id="tm-connected-network"
>
  <div
    class="tm-connected-network__connection"
  >
    <div
      class="tm-connected-network__icon"
      id="tm-connected-network__icon"
    >
      <i
        class="material-icons"
      >
        lock
      </i>
    </div>
     
    <div
      class="tm-connected-network__string"
      id="tm-connected-network__string"
    >
      <span
        class="chain-id"
      >
        chain_id
      </span>
    </div>
  </div>
   
  <div
    class="tm-connected-network__string"
    id="tm-connected-network__block"
  >
    <!---->
    <a
      href="https://explorecosmos.network/blocks/0"
    >
      #0
      <i
        class="material-icons exit"
      >
        exit_to_app
      </i>
    </a>
  </div>
</div>
`;
